fix spacing in about component

--- a/client/src/components/About.scss
+++ b/client/src/components/About.scss
@@ -9,17 +9,11 @@
   font-weight: bolder;
   font-family: 'Noto Sans Display', sans-serif;
 
-  .about-body {
+  .about-top {
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-
-    .about-top {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-      padding: 5% 3%;
-    }
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 5% 3%;
   }
 
   .about-bottom {
